RIPE NCC has merged 5af977293
* chore(deps): update dependency gradle to v8.13 [7335cafef]
* chore(deps): update dependency io.freefair.lombok:io.freefair.lombok.gradle.plugin to v8.12.2 [725ceea24]
* Don't say anything about ROA change alert when unsubscribing from general ROA alerts [0a537bfef]
* Cleanup [7e82bed33]
* Use toList() [c39a9957e]
* Make Sonarqube a bit happier [dd9f9a991]
* Simplify notifyAboutRoaChanges [f3d3a77ac]
* Introduce defaultSubscriptions() methods [662c372d6]
* Revert ifs [33a5f8c7c]
* Rename to showRoas [cda322492]
* Make column nullable [ec22bfe7f]
* chore(deps): update dependency io.sentry:sentry-bom to v8.2.0 [861525091]
* chore(deps): update dependency io.freefair.lombok:io.freefair.lombok.gradle.plugin to v8.12.1 [2a9ff5814]
* chore(deps): update dependency commons-codec:commons-codec to v1.18.0 [e63c18b83]
* chore(deps): update dependency com.google.code.gson:gson to v2.12.1 [61cbf3820]
* chore(deps): update dependency gradle to v8.12.1 [076df585e]
* chore(deps): update dependency io.sentry:sentry-bom to v8 [40b611165]
* Don't try to be smart and notify about ROA changes subscription on every email send to the user about alerts. [7f324fd1d]
* Adjust template [7d34ef014]
* Add logging for a corner case [5a9439903]
* Fix UnsubscribeFromRoaAlertCommandHandler [0da9012e9]
* More NPE fixes [1ea4f5e3e]
* Cleanup [9a0af303b]
* Add test for empty case [4cb90fac6]
* Fix NPE [dea6f9e2c]
* More tests [6e8e7223f]
* Remove redundant code, refactor [2142a369e]
* Extend email templates with ROA changes stuff [99d212f35]
* Don't try to notify for absent configuration [e82f68538]
* Another fix [c417d6183]
* Fix UpdateRoaChangeAlertCommandHandler [29d270998]
* Better templates [723ed6494]
* More tests [eef7817b9]
* Remove redundant code [21b418bbf]
* Fix request validation [9c338c5e6]
* Fix broken test [7168e81fe]
* Adjust email template [80a05f649]
* Fixes and tests [d78685031]
* Fix test [6c56d55fc]
* Refactor, introduce UpdateRoaChangeAlertCommand 